# esp32-ptm216b

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  devices.json.example  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  buttons.hpp  constants.hpp  events.hpp  main.cpp  ota.hpp  ota_fwd.hpp  ptm216b.hpp  ptm216b_fwd.hpp  ptm216b_types.hpp  relay.hpp
tools/: make_devices.py
tools/linux_recv/: linux_recv.py
tools/nfc/: nfc.py
tools/ota/: ota.py
tools/ota/pb/: session_pb2.py
tools/ota/proto/: __init__.py
tools/ota/security/: __init__.py  signature.py  srp6a.py
tools/ota/transport/: ble_cli.py
tools/ota/utils/: convenience.py
